change license BSD to GNU GPL v3

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,9 @@ Patches and Suggestions
 ```````````````````````
 
 - Lionel Darras
+
+Original authors
+````````````````
+
+- VantagePro2 class is inspired from PyWeather projet 
+  by Patrick C. McGinty <pyweather@tuxcoder.com>
